[package]
name = "sudoku-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.19", default-features = false, features = ['termion'] }
termion = "1.5"
rand = "0.8.4"

[features]
default = ["onedark"]
tranquil = []
dracula = []
onedark = []